fix: products endpoints
