# src/routes/productRoutes.js
@@ -1,8 +1,7 @@
 import express from "express";
 import { getProduct } from "../controllers/productController.js";
-import { authenticateJwt } from "../middlewares/authMiddleware.js";
 const router = express.Router();
 
-router.get("/:barcode", authenticateJwt, getProduct);
+router.get("/:barcode", getProduct);
 
 export default router;
